--- a/app/src/main/res/layout/activity_patient_main_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_main_page_new.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view40" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/buttonPatientReportsNew"
         android:layout_width="156dp"
         android:layout_height="150dp"
         android:layout_marginStart="18dp"
@@ -197,9 +197,9 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/ic_baseline_analytics_24"
         android:elevation="2dp"
-        app:layout_constraintEnd_toEndOf="@+id/button8"
-        app:layout_constraintStart_toStartOf="@+id/button8"
-        app:layout_constraintTop_toTopOf="@+id/button8" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonPatientReportsNew"
+        app:layout_constraintStart_toStartOf="@+id/buttonPatientReportsNew"
+        app:layout_constraintTop_toTopOf="@+id/buttonPatientReportsNew" />
 
     <TextView
         android:id="@+id/textView78"
@@ -210,8 +210,8 @@
         android:text="@string/reports"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/button8"
-        app:layout_constraintStart_toStartOf="@+id/button8"
+        app:layout_constraintEnd_toEndOf="@+id/buttonPatientReportsNew"
+        app:layout_constraintStart_toStartOf="@+id/buttonPatientReportsNew"
         app:layout_constraintTop_toBottomOf="@+id/imageView36" />
 
     <ImageView
