--- a/app/src/main/res/layout/activity_doctor_view_appointments_new.xml
+++ b/app/src/main/res/layout/activity_doctor_view_appointments_new.xml
@@ -19,7 +19,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctorAppointments"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="620dp"
         app:layout_constraintBottom_toBottomOf="@+id/view47"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,4 +35,89 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayoutDocReport_NEW"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#A1000000"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <View
+                android:id="@+id/view72"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:layout_marginBottom="75dp"
+                android:background="@drawable/blue_gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView114"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/report"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="@+id/view72"
+                app:layout_constraintStart_toStartOf="@+id/view72"
+                app:layout_constraintTop_toTopOf="@+id/view72" />
+
+            <EditText
+                android:id="@+id/editTextTextReportTitle_NEW"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/textview_background"
+                android:ellipsize="start"
+                android:ems="10"
+                android:hint="@string/report_title"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:padding="8dp"
+                android:textColor="#1A446B"
+                app:layout_constraintEnd_toEndOf="@+id/view72"
+                app:layout_constraintStart_toStartOf="@+id/view72"
+                app:layout_constraintTop_toBottomOf="@+id/textView114" />
+
+            <EditText
+                android:id="@+id/editTextTextrReportContent_NEW"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/textview_background"
+                android:ems="10"
+                android:hint="@string/description_report"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:padding="8dp"
+                android:textColor="#1A446B"
+                app:layout_constraintEnd_toEndOf="@+id/view72"
+                app:layout_constraintStart_toStartOf="@+id/view72"
+                app:layout_constraintTop_toBottomOf="@+id/editTextTextReportTitle_NEW" />
+
+            <Button
+                android:id="@+id/buttonSendReport_NEW"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/navy"
+                android:padding="10dp"
+                android:text="@string/sendreport"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/view72"
+                app:layout_constraintStart_toStartOf="@+id/view72"
+                app:layout_constraintTop_toBottomOf="@+id/editTextTextrReportContent_NEW" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
