--- a/app/src/main/res/layout/activity_patient_registration.xml
+++ b/app/src/main/res/layout/activity_patient_registration.xml
@@ -14,7 +14,7 @@
         android:layout_width="150dp"
         android:layout_height="150sp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/ic_baseline_person_24"
+        android:background="@drawable/iconpatient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
