--- a/app/src/main/res/drawable/blue_gradient.xml
+++ b/app/src/main/res/drawable/blue_gradient.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:topRightRadius="0dp"
-        android:bottomRightRadius="0dp" android:bottomLeftRadius="0dp"/>
+    <corners android:topRightRadius="15dp"
+        android:bottomRightRadius="15dp"
+        android:topLeftRadius="15dp"
+        android:bottomLeftRadius="15dp"/>
 
 
     <gradient android:angle ="225"
