UPDATE - Admin UI

--- a/app/src/main/res/drawable/shape_left.xml
+++ b/app/src/main/res/drawable/shape_left.xml
@@ -4,7 +4,7 @@
       android:bottomRightRadius="40dp"/>
 
     <gradient android:startColor="#0088FF"
-        android:endColor="#0099ff"
+        android:endColor="#1A446B"
         android:angle="225"/>
 
 
