--- a/app/src/main/res/layout/activity_admincodepage.xml
+++ b/app/src/main/res/layout/activity_admincodepage.xml
@@ -9,9 +9,9 @@
 
     <View
         android:id="@+id/view7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_left_curve"
+        android:layout_width="310dp"
+        android:layout_height="500dp"
+        android:background="@drawable/navy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,7 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
-        android:fontFamily="monospace"
+        android:layout_marginTop="100dp"
         android:text="@string/code_admin"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -36,11 +35,12 @@
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/transparent_white_borders"
+        android:background="@drawable/textview_background"
         android:ems="10"
+        android:hint="@string/enter_code_text"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#1A446B"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,17 +49,16 @@
 
     <Button
         android:id="@+id/buttonProceedAdmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/whiterectangle"
-        android:fontFamily="monospace"
+        android:background="@drawable/button_white_and_blue_border_background"
         android:hapticFeedbackEnabled="false"
+        android:padding="10dp"
         android:text="@string/proceedbutton"
-        android:textColor="#0099ff"
+        android:textColor="#1A446B"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordADMIN" />
