--- a/app/src/main/res/drawable/ic_wpwwave.xml
+++ b/app/src/main/res/drawable/ic_wpwwave.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="320">
   <path
       android:pathData="M0,96L120,128C240,160 480,224 720,224C960,224 1200,160 1320,128L1440,96L1440,0L1320,0C1200,0 960,0 720,0C480,0 240,0 120,0L0,0Z"
-      android:fillColor="#0099ff"/>
+      android:fillColor="#1A446B"/>
 </vector>
